hphp/test/zend/good/ext/json/tests/pass001.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('json')) die('skip: json extension not available');
}
