hphp/test/zend/bad/ext/soap/tests/server009.php.skipif
<?php
	require_once('skipif.inc');
	if (!extension_loaded('session')) {
		die('skip this test needs session extension');
	}
?>